# perdersi

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  playbook.yml  startprod.sh
ansible/: base.yml  deploy.yml  inventory  se.yml  updater.yml
ansible/nginx/: ps_serv.conf
ansible/sepol/: Makefile  pspol.te
cmake/: marker_remote.in
cmake/Modules/: FindInkscape.cmake  PsUtil.cmake  Sep.cmake
data/: ps_coor.service  ps_coor_starter.sh  ps_updater.service  ps_updater_starter.sh
files/: confaux.py  config.py  config_deploy_andrej.py  config_deploy_script_andrej.sh  config_server_andrej.py  config_server_default.py  config_updater_andrej.py  config_updater_default.py  conftest.py  coor.py  deploy.py  genhdr.py  preload.py  recursive_timestamp.py  server.py  server_coor.py  start.py  startup.py  test_server.py  timestamp.py
files/blender/: bxprt.py
nginx/: ps_serv.conf
sepol/: Makefile  _mkselogin.sh  _mkseuser.sh  pspol.fc  pspol.te
src/: CMakeLists.txt  cruft.cpp  cruft.h  mdlpar.cpp  pch1.cpp  pch1.h  psasio.hpp  pscon.hpp  pscruft.hpp  psdata.cpp  psdata.hpp  psgit.hpp  psikm.hpp  psmisc.hpp  pssfml.hpp  psthr.hpp  psupdater.hpp  stage2.cpp  test.cpp  tupdater.cpp  updater.cpp  updater.rc
src/cmake/Modules/: FindLibGit2.cmake
